--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,9 @@ dependencies:
   in_app_review:
   sliver_tools:
   logger:
-  firebase_messaging: ^15.2.2
+  firebase_messaging:
+  loading_animation_widget: ^1.3.0
+  jovial_svg: ^1.1.25
 
 
 dev_dependencies:
@@ -64,8 +66,6 @@ dev_dependencies:
 
 
 flutter:
-  uses-material-design: true
-
   assets:
     - assets/
     - assets/images/
@@ -78,6 +78,22 @@ flutter:
     - assets/animations/
     - assets/translations/
 
+  fonts:
+    - family: AdwaitaSans
+      fonts:
+        - asset: assets/fonts/AdwaitaSans-Regular.ttf
+
+    - family: AdwaitaMono
+      fonts:
+        - asset: assets/fonts/AdwaitaMono-Regular.ttf
+    
+    - family: SFPro
+      fonts:
+        - asset: assets/fonts/SFProRegular.otf
+
+  uses-material-design: true
+
+
 flutter_launcher_icons:
   android: true
   ios: true
@@ -88,6 +104,7 @@ flutter_launcher_icons:
   adaptive_icon_monochrome: "assets/icons/app/kronk-foreground-monochrome.png"
   min_sdk_android: 28
   remove_alpha_ios: true
+
 
 flutter_native_splash:
   color: "#ffffff"
