--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,8 +52,8 @@ dependencies:
   sliver_tools:
   logger:
   firebase_messaging:
-  loading_animation_widget: ^1.3.0
-  jovial_svg: ^1.1.25
+  loading_animation_widget:
+  jovial_svg:
 
 
 dev_dependencies:
