--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/
+    - assets/fonts/
     - assets/images/
     - assets/icons/
     - assets/icons/app/
@@ -76,6 +77,7 @@ flutter:
     - assets/icons/others/
     - assets/animations/
     - assets/translations/
+    - assets/fonts/MyIcon.ttf
 
   fonts:
     - family: MyIcon
